# long_term_memory_course

./: README.md  pyproject.toml
notebooks/: lesson_1_concepts.md  lesson_2_baseline.ipynb  lesson_2_procedural.ipynb  lesson_3_episodic.ipynb  lesson_3_semantic.ipynb  lesson_4_episodic.ipynb  lesson_4_semantic_collection.ipynb  lesson_5_procedural.ipynb  lesson_5_semantic_profile.ipynb  lesson_6_workflow.ipynb
src/memory_course/: examples.py  prompts.py  schemas.py  state.py  utils.py
