[project]
name = "memory-course"
version = "0.1.0"
description = "LangGraph Memory Course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.17",
    "langchain-anthropic>=0.3.5",
    "langgraph>=0.2.69",
    "jupyter>=1.1.1",
    "langmem==0.0.5rc9",
]

[tool.setuptools]
packages = ["memory_course"]
[tool.setuptools.package-dir]
"memory_course" = "src/memory_course"
